апдейты ссылок, тайтлов

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Фотограф в Минске</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-	<meta name="description" content="Привет, я фотограф из Минска. Переходи на мою страницу чтобы посмотреть на мои работы и узнать больше про меня!">
+	<meta name="description"
+		content="Привет, я фотограф из Минска. Переходи на мою страницу чтобы посмотреть на мои работы и узнать больше про меня!">
 	<meta name="keywords" content="фотографии, моменты, атмосферу">
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -40,8 +41,8 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html"><span class="img"
-						style="background-image: url(images/author.jpg);"></span>Олег Пазний</a></h1>
+			<h2 id="colorlib-logo"><a href="index.html"><span class="img"
+						style="background-image: url(images/author.jpg);"></span>Олег Пазний</a></h2>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Главная</a></li>
@@ -73,11 +74,13 @@
 						<div class="author-image text img d-flex">
 							<section class="home-slider js-fullheight owl-carousel">
 								<div class="slider-item js-fullheight">
-									<img src="images/author.jpg" alt="Фотограф Олег Пазний">
+									<img src="images/author.jpg" alt="Фотограф Олег Пазний"
+										title="Фотография Олега Пазнего">
 								</div>
 
 								<div class="slider-item js-fullheight">
-									<img src="images/author-2.jpg" alt="Фотограф Олег Пазний">
+									<img src="images/author-2.jpg" alt="Фотограф Олег Пазний"
+										title="Фотография Олега Пазнего">
 								</div>
 							</section>
 						</div>
@@ -85,14 +88,17 @@
 							<div class="desc">
 								<span class="subheading">Привет, я</span>
 								<h1 class="big-letter">Олег Пазний</h1>
-								<h1 class="mb-4"><span>Олег Пазний и я</span> словлю Ваш момент<span>.</span></h1>
+								<h2 class="mb-4"><span>Олег Пазний и я</span> словлю Ваш момент<span>.</span></h2>
 								<p class="mb-4">Я фотограф из Минска с искусством и профессионализмом захватывающий
 									моменты и создающий неповторимые и вдохновляющие фотографии.</p>
 								<h3 class="signature h1">OlegPazny</h3>
 								<ul class="ftco-social mt-3">
-									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-									<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+									<li class="ftco-animate"><a href="https://www.instagram.com/o.b_prod/"
+											target="_blank"><span class="icon-instagram"></span></a></li>
+									<li class="ftco-animate"><a href="https://t.me/pazny" target="_blank"><span
+												class="icon-telegram"></span></a></li>
+									<li class="ftco-animate"><a href="https://vk.com/opazny" target="_blank"><span
+												class="icon-vk"></span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -106,19 +112,25 @@
 					истории.</p>
 				<ul class="info-list">
 					<li>
-						Если вам нужны качественные фотографии для вашего бизнеса или продукции, я буду рад помочь вам. Я создаю продуманные кадры, которые подчеркивают лучшие особенности вашего продукта.
+						Если вам нужны качественные фотографии для вашего бизнеса или продукции, я буду рад помочь вам.
+						Я создаю продуманные кадры, которые подчеркивают лучшие особенности вашего продукта.
 					</li>
 					<li>
-						Я помогу вам запечатлеть ваши семейные моменты, создавая неповторимую атмосферу и непринужденные кадры, которые будут трогательными и прекрасными.
+						Я помогу вам запечатлеть ваши семейные моменты, создавая неповторимую атмосферу и непринужденные
+						кадры, которые будут трогательными и прекрасными.
 					</li>
 					<li>
-						Хотите, чтобы ваш портрет выделялся из толпы? Я работаю с разными стилями и создаю индивидуальные портреты, которые подчеркивают вашу уникальность и красоту.
+						Хотите, чтобы ваш портрет выделялся из толпы? Я работаю с разными стилями и создаю
+						индивидуальные портреты, которые подчеркивают вашу уникальность и красоту.
 					</li>
 					<li>
-						Свадебная фотография: Ваше свадебное торжество - это особый день, который заслуживает быть запечатлённым великолепными фотографиями. Я делаю все возможное, чтобы сохранить каждую эмоцию, каждую деталь и создать незабываемые воспоминания об этом счастливом моменте вашей жизни.
+						Свадебная фотография: Ваше свадебное торжество - это особый день, который заслуживает быть
+						запечатлённым великолепными фотографиями. Я делаю все возможное, чтобы сохранить каждую эмоцию,
+						каждую деталь и создать незабываемые воспоминания об этом счастливом моменте вашей жизни.
 					</li>
 					<li>
-						Вы являетесь организатором мероприятия или спортивных соревнований? Я готов запечатлеть все самые яркие моменты, сохранив энергию и атмосферу вашего мероприятия.
+						Вы являетесь организатором мероприятия или спортивных соревнований? Я готов запечатлеть все
+						самые яркие моменты, сохранив энергию и атмосферу вашего мероприятия.
 					</li>
 				</ul>
 			</section>
@@ -126,13 +138,15 @@
 				<div class="container">
 					<div class="row justify-content-center mb-2 pb-3">
 						<div class="col-md-7 heading-section heading-section-2 text-center ftco-animate">
-							<h2 class="mb-4">Подписывайтесь на мой Instagram</h2>
+							<h2 class="mb-4">Подписывайтесь на мой <a href="https://www.instagram.com/o.b_prod/"
+									target="_blank">Instagram</a></h2>
 						</div>
 					</div>
 					<div class="row no-gutters">
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/reklama-audi-rs-etron.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/reklama-audi-rs-etron.jpg" alt="Рекламные фотографии Audi">
+								<img class="insta-img image-popup" src="images/reklama-audi-rs-etron.jpg"
+									alt="Рекламные фотографии Audi" title="Фотография Audi RS e-tron GT">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -140,7 +154,8 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/dve-mashiny-stoyat-na-zakate.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Фотосессия машин на закате">
+								<img class="insta-img image-popup" src="images/dve-mashiny-stoyat-na-zakate.jpg"
+									alt="Фотосессия машин на закате" title="Плёночная фотография двух машин на закате">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -148,7 +163,9 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/karbonovyj-velosiped-na-doroge.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan">
+								<img class="insta-img image-popup" src="images/karbonovyj-velosiped-na-doroge.jpg"
+									alt="Фото карбонового велосипеда Oduwan"
+									title="Фотография велоипеда Oduwan на дороге">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -156,7 +173,8 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/seryj-avtomobil-edet-v-zakate.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фото Opel Vectra на закате">
+								<img class="insta-img image-popup" src="images/seryj-avtomobil-edet-v-zakate.jpg"
+									alt="Фото Opel Vectra на закате" title="Плёночная фотография Opel Vectra">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -164,7 +182,9 @@
 						</div>
 						<div class="col-sm-12 col-md ftco-animate crop-img">
 							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" class="insta-img image-popup">
-								<img class="insta-img image-popup" src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фотосессия Seat под мостом">
+								<img class="insta-img image-popup"
+									src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"
+									alt="Фотосессия Seat под мостом" title="Seat Toledo золотого цвета">
 								<div class="icon d-flex justify-content-center">
 									<span class="icon-instagram align-self-center"></span>
 								</div>
@@ -182,39 +202,49 @@
 								<ul class="list-unstyled photo">
 									<div class="container">
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg" alt="Фотосесия Audi RS e-tron GT"></div>
+											<li>
+												<div class="footer-img"><img src="images/reklama-audi-rs-etron.jpg"
+														alt="Фотосесия Audi RS e-tron GT"
+														title="Audi e-tron синего цвета"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/dve-mashiny-stoyat-na-zakate.jpg" alt="Плёночное фото Opel Vectra"></div>
+											<li>
+												<div class="footer-img"><img
+														src="images/dve-mashiny-stoyat-na-zakate.jpg"
+														alt="Плёночное фото двух машин"
+														title="Две машины стоят на обочине"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/karbonovyj-velosiped-na-doroge.jpg" alt="Фото карбонового велосипеда Oduwan"></div>
+											<li>
+												<div class="footer-img"><img
+														src="images/karbonovyj-velosiped-na-doroge.jpg"
+														alt="Фото карбонового велосипеда Oduwan"
+														title="Карбоновый велосипед Oduwan"></div>
 											</li>
 										</div>
 										<div class="row no-gutters">
-											<li><div class="footer-img"><img src="images/seryj-avtomobil-edet-v-zakate.jpg" alt="Фотосессия Opel на закате"></div>
+											<li>
+												<div class="footer-img"><img
+														src="images/seryj-avtomobil-edet-v-zakate.jpg"
+														alt="Фотосессия Opel на закате" title="Серый Opel Vectra"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" alt="Фото Seat Toledo под мостом"></div>
+											<li>
+												<div class="footer-img"><img
+														src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"
+														alt="Фото Seat Toledo под мостом"
+														title="Seat Toledo золотого цвета"></div>
 											</li>
-											<li><div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg" alt="Фотосесия трекового велосипеда Look"></div>
+											<li>
+												<div class="footer-img"><img src="images/trekovyj-velosiped-luk.jpg"
+														alt="Фотосесия трекового велосипеда Look"
+														title="Трековый велосипед Look 464"></div>
 											</li>
 										</div>
-										
+
 									</div>
-									
+
 								</ul>
 							</div>
 						</div>
-						<div class="col-md">
-							<div class="ftco-footer-widget mb-4">
-								<h2 class="ftco-heading-2">Архив</h2>
-								<ul class="list-unstyled categories">
-									<li><a href="#">Май 2023 <span>(105)</span></a></li>
-									<li><a href="#">Октябрь 2018 <span>(212)</span></a></li>
-									<li><a href="#">Сентябрь 2018 <span>(150)</span></a></li>
-									<li><a href="#">Июнь 2022 <span>(100)</span></a></li>
-									<li><a href="#">Июль 2023 <span>(200)</span></a></li>
-								</ul>
-							</div>
-						</div>
+						<div class="col-md"></div>
 						<div class="col-md">
 							<div class="ftco-footer-widget mb-4">
 								<h2 class="ftco-heading-2">Остались вопросы??</h2>
@@ -233,13 +263,11 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-
-							<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;
-								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
-								template is made with <i class="icon-heart" aria-hidden="true"></i> by <a
-									href="https://colorlib.com" target="_blank">Colorlib</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							<p>
+								&copy Басалай Олег
+							</p>
+							<p>
+								Все материалы использованы в учебных целях
 							</p>
 						</div>
 					</div>
