--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet">
 
@@ -37,7 +38,27 @@
 </head>
 
 <body>
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date();
+			for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+		ym(95510232, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
+		});
+	</script>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/95510232" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
+	<!-- /Yandex.Metrika counter -->
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
@@ -73,14 +94,12 @@
 					<div class="d-flex align-items-center js-fullheight">
 						<div class="author-image text img d-flex">
 							<section class="home-slider js-fullheight owl-carousel">
-								<div class="slider-item js-fullheight">
-									<img src="images/author.jpg" alt="Фотограф Олег Пазний"
-										title="Фотография Олега Пазнего">
+								<div class="slider-item js-fullheight"
+									style="background-image: url(images/author.jpg);">
 								</div>
 
-								<div class="slider-item js-fullheight">
-									<img src="images/author-2.jpg" alt="Фотограф Олег Пазний"
-										title="Фотография Олега Пазнего">
+								<div class="slider-item js-fullheight"
+									style="background-image: url(images/author-2.jpg);">
 								</div>
 							</section>
 						</div>
