добавлен json-ld

--- a/article-1.html
+++ b/article-1.html
@@ -68,6 +68,47 @@
 
 		gtag('config', 'G-N1NC1VPD2N');
 	</script>
+	<!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
+	<script type="application/ld+json">
+	[
+	  {
+		"@context": "http://schema.org",
+		"@type": "Article",
+		"name": "Разбор плёночных фотографий",
+		"author": {
+		  "@type": "Person",
+		  "name": "Олег Пазний"
+		},
+		"image": "https://seo.belstu.by/Basalay/images/mashina-na-zakate.jpg",
+		"articleSection": "Opel Vectra и ColorPlus 200",
+		"articleBody": "В данном случае была использована плёнка Kodak ColorPlus 200, которая\n\t\t\t\t\t\t\t\tодновременно имеет и хорошее ненадоедливое зерно, и достаточную для таких условий\n\t\t\t\t\t\t\t\tсветочувствительность. Тут удалось &quot;убить двух зайцев&quot;, а именно хорошо проэкспонировать\n\t\t\t\t\t\t\t\tкадр без лишних шумов."
+	  },
+	  {
+		"@context": "http://schema.org",
+		"@type": "Article",
+		"name": "Разбор плёночных фотографий",
+		"author": {
+		  "@type": "Person",
+		  "name": "Олег Пазний"
+		},
+		"image": "https://seo.belstu.by/Basalay/images/chernaya-mashina-bmv-v-tumane.jpg",
+		"articleSection": "BMW 3 и Portra",
+		"articleBody": "Плёнка в данном случае использовалась Kodak Portra 160, которая не подходит\n\t\t\t\t\t\t\t\tпод такие условия от слова совсем, потому что как минимум она рассчитана на хорошее\n\t\t\t\t\t\t\t\tколичество естественного солнечного света. Этот нюанс сделал кадр холодным и\n\t\t\t\t\t\t\t\tсиневато-зеленым, что конечно можно поправить цветокоррекцией"
+	  },
+	  {
+		"@context": "http://schema.org",
+		"@type": "Article",
+		"name": "Разбор плёночных фотографий",
+		"author": {
+		  "@type": "Person",
+		  "name": "Олег Пазний"
+		},
+		"image": "https://seo.belstu.by/Basalay/images/muzhchina-s-trekovym-velosipedom.jpg",
+		"articleSection": "Look и Fomapan",
+		"articleBody": "Если у фотографа спросить совет какую плёнку стоит первым делом попробовать\n\t\t\t\t\t\t\t\tдля фотографии, он скажет: &quot;чёрно-белую&quot;. А если уточнить какую чёрно-белую, последует\n\t\t\t\t\t\t\t\tответ: &quot;Fomapan&quot;."
+	  }
+	]
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
