--- a/article-2.html
+++ b/article-2.html
@@ -68,6 +68,35 @@
 
 		gtag('config', 'G-N1NC1VPD2N');
 	</script>
+	<!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
+	<script type="application/ld+json">
+	[
+	  {
+		"@context": "http://schema.org",
+		"@type": "Article",
+		"name": "Из аналога в цифру",
+		"image": "https://seo.belstu.by/Basalay/images/negativ-plenochnoj-lenty.jpg",
+		"articleSection": "Оцифровка плёночного носителя",
+		"articleBody": "Почему же большинство профессионалов прибегают к услугам лаборатории и не\n\t\t\t\t\t\t\t\tвыполняют работу по проявке и сканированию дома?"
+	  },
+	  {
+		"@context": "http://schema.org",
+		"@type": "Article",
+		"name": "Из аналога в цифру",
+		"image": "https://seo.belstu.by/Basalay/images/fotolaboratoriya-fotoskvot.jpg",
+		"articleSection": "Каким фотолабораториям можно доверять в Минске?",
+		"articleBody": "Фотосквот - это одна из двух лабораторий в Минске, куда бы я без сомнений\n\t\t\t\t\t\t\t\tотдал свою плёнку на выполнение процедур проявки и сканирования."
+	  },
+	  {
+		"@context": "http://schema.org",
+		"@type": "Article",
+		"name": "Из аналога в цифру",
+		"image": "https://seo.belstu.by/Basalay/images/karta-videozahvata-dlya-kassetnoj-videokamery.jpg",
+		"articleSection": "Что делать с кассетами?",
+		"articleBody": "Для оцифровки нам потребуется компьютер и карта видеозахвата с выходом на\n\t\t\t\t\t\t\t\t&quot;тюльпан&quot; или S-Video в зависимости от того, какой выход предусмотрен в Вашей камере"
+	  }
+	]
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
