--- a/article-3.html
+++ b/article-3.html
@@ -68,6 +68,17 @@
 
 		gtag('config', 'G-N1NC1VPD2N');
 	</script>
+	<!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "Article",
+	  "name": "Ретуширование фотографий",
+	  "image": "https://seo.belstu.by/Basalay/images/perednyaya-chast-mashiny-do-retushi.jpg",
+	  "articleSection": "Отбор кадров",
+	  "articleBody": "Перед ретушированием необходимо для начала отобрать лучшие кадры, так как\n\t\t\t\t\t\t\t\tпроцесс ретуширования непрост и требует много времени и усидчивости."
+	}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
