--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,20 @@
 
 		gtag('config', 'G-N1NC1VPD2N');
 	</script>
+	<!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "LocalBusiness",
+	  "name": "Контакты",
+	  "telephone": "+375 (29) 865-79-68",
+	  "email": "basalay.oleg@yandex.by",
+	  "address": {
+		"@type": "PostalAddress",
+		"streetAddress": "г. Минск, ул. Михаила Савицкого"
+	  }
+	}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
