--- a/services.html
+++ b/services.html
@@ -68,6 +68,21 @@
 
 		gtag('config', 'G-N1NC1VPD2N');
 	</script>
+	<!-- Разметка JSON-LD, созданная Мастером разметки структурированных данных Google. -->
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "LocalBusiness",
+	  "name": "Услуги",
+	  "image": "https://seo.belstu.by/Basalay/images/author.jpg",
+	  "telephone": "+375 (29) 865-79-68",
+	  "email": "basalay.oleg@yandex.by",
+	  "address": {
+		"@type": "PostalAddress",
+		"streetAddress": "г. Минск, ул. Михаила Савицкого 3"
+	  }
+	}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
