--- a/article-2.html
+++ b/article-2.html
@@ -97,6 +97,45 @@
 	  }
 	]
 	</script>
+	<script type="application/ld+json">
+		{
+		 "@context": "http://schema.org",
+		 "@type": "BreadcrumbList",
+		 "itemListElement":
+		 [
+			{
+			"@type": "ListItem",
+			"position": 1,
+			"item":
+			{
+			"@id": "https://seo.belstu.by/Basalay/index.html",
+			"name": "Главная",
+			"image": "https://seo.belstu.by/Basalay/images/author.jpg"
+			}
+			},
+		{
+			"@type": "ListItem",
+			"position": 2,
+			"item":
+			{
+			"@id": "https://seo.belstu.by/Basalay/blog.html",
+			"name": "Блог",
+			"image": "https://seo.belstu.by/Basalay/images/author.jpg"
+			}
+			},
+		{
+			"@type": "ListItem",
+			"position": 3,
+			"item":
+			{
+			"@id": "https://seo.belstu.by/Basalay/article-2.html",
+			"name": "Оцифровка плёночного носителя",
+			"image": "https://seo.belstu.by/Basalay/images/negativ-plenochnoj-lenty.jpg"
+			}
+			}
+		]
+		}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
