--- a/article-3.html
+++ b/article-3.html
@@ -79,6 +79,45 @@
 	  "articleBody": "Перед ретушированием необходимо для начала отобрать лучшие кадры, так как\n\t\t\t\t\t\t\t\tпроцесс ретуширования непрост и требует много времени и усидчивости."
 	}
 	</script>
+	<script type="application/ld+json">
+		{
+		 "@context": "http://schema.org",
+		 "@type": "BreadcrumbList",
+		 "itemListElement":
+		 [
+			{
+			"@type": "ListItem",
+			"position": 1,
+			"item":
+			{
+			"@id": "https://seo.belstu.by/Basalay/index.html",
+			"name": "Главная",
+			"image": "https://seo.belstu.by/Basalay/images/author.jpg"
+			}
+			},
+		{
+			"@type": "ListItem",
+			"position": 2,
+			"item":
+			{
+			"@id": "https://seo.belstu.by/Basalay/blog.html",
+			"name": "Блог",
+			"image": "https://seo.belstu.by/Basalay/images/author.jpg"
+			}
+			},
+		{
+			"@type": "ListItem",
+			"position": 3,
+			"item":
+			{
+			"@id": "https://seo.belstu.by/Basalay/article-3.html",
+			"name": "Ретуширование фотографий",
+			"image": "https://seo.belstu.by/Basalay/images/perednyaya-chast-mashiny-do-retushi.jpg"
+			}
+			}
+		]
+		}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
