--- a/collection.html
+++ b/collection.html
@@ -83,6 +83,35 @@
 	  }
 	}
 	</script>
+	<script type="application/ld+json">
+		{
+		 "@context": "http://schema.org",
+		 "@type": "BreadcrumbList",
+		 "itemListElement":
+		 [
+		 {
+		 "@type": "ListItem",
+		 "position": 1,
+		 "item":
+		 {
+		 "@id": "https://seo.belstu.by/Basalay/index.html",
+		 "name": "Главная",
+		 "image": "https://seo.belstu.by/Basalay/images/author.jpg"
+		}
+		},
+		{
+		"@type": "ListItem",
+		"position": 2,
+		"item":
+		{
+		"@id": "https://seo.belstu.by/Basalay/collection.html",
+		"name": "Галерея",
+		"image": "https://seo.belstu.by/Basalay/images/dve-mashiny-stoyat-na-zakate.jpg"
+		}
+		}
+		]
+		}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
