--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
 	  }
 	}
 	</script>
+	<script type="application/ld+json">
+		{
+		 "@context": "http://schema.org",
+		 "@type": "BreadcrumbList",
+		 "itemListElement":
+		 [
+		 {
+		 "@type": "ListItem",
+		 "position": 1,
+		 "item":
+		 {
+		 "@id": "https://seo.belstu.by/Basalay/index.html",
+		 "name": "Фотограф Олег Пазний",
+		 "image": "https://seo.belstu.by/Basalay/images/author.jpg"
+		}
+		}
+		]
+		}
+	</script>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
