новые метатеги, поделиться в соцсетях

--- a/article-1.html
+++ b/article-1.html
@@ -8,6 +8,13 @@
 	<meta name="description"
 		content="Разбор частых ошибок при фотографировании на плёнку. Посмотрим ошибки на примере моих снимков.">
 	<meta name="keywords" content="кадров, пленка, фотографий">
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="http://seo.belstu.by/Basalay/article-1.html" />
+	<meta property="og:title" content="Плёночные фото" />
+	<meta property="og:description" content="Разбор пленочных фотографий">
+	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
+	<meta property="og:locale" content="ru_RU" />
+
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -327,6 +334,8 @@
 													(29) 865-79-68</span></a></li>
 										<li><a href="#"><span class="icon icon-envelope"></span><span
 													class="text">basalay.oleg@yandex.by</span></a></li>
+													<li><script src="https://yastatic.net/share2/share.js"></script>
+														<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack" data-services="vkontakte,telegram,twitter,viber,whatsapp"></div></li>
 									</ul>
 								</div>
 							</div>
