--- a/collection.html
+++ b/collection.html
@@ -8,6 +8,12 @@
 	<meta name="description"
 		content="Посмотрите на мои работы! Я фотографирую машины, велосипеды на плёнку и беззеркальную камеру.">
 	<meta name="keywords" content="автомобили, важную, процессе">
+	<meta property="og:type" content="product" />
+	<meta property="og:url" content="http://seo.belstu.by/Basalay/collection.html" />
+	<meta property="og:title" content="Портфолио" />
+	<meta property="og:description" content="Портфолио фотографа Олега Пазнего">
+	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
+	<meta property="og:locale" content="ru_RU" />
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -355,6 +361,8 @@
 													(29) 865-79-68</span></a></li>
 										<li><a href="#"><span class="icon icon-envelope"></span><span
 													class="text">basalay.oleg@yandex.by</span></a></li>
+													<li><script src="https://yastatic.net/share2/share.js"></script>
+														<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack" data-services="vkontakte,telegram,twitter,viber,whatsapp"></div></li>
 									</ul>
 								</div>
 							</div>
