--- a/404.html
+++ b/404.html
@@ -2,18 +2,12 @@
 <html lang="ru">
 
 <head>
-	<title>Блог Олега Пазнего</title>
+	<title>Страница не найдена</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta name="description"
-		content="Читайте интересующие Вас статьи на тему фотографирования и обработки фотографий. Я расскажу много нового для Вас!">
-	<meta name="keywords" content="изображений, портретов, создания">
-	<meta property="og:type" content="article" />
-	<meta property="og:url" content="http://seo.belstu.by/Basalay/blog.html" />
-	<meta property="og:title" content="Блог" />
-	<meta property="og:description" content="Блог фотографа Олега Пазнего">
-	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
-	<meta property="og:locale" content="ru_RU" />
+		content="Привет, я фотограф из Минска. Переходи на мою страницу чтобы посмотреть на мои работы и узнать больше про меня!">
+	<meta name="keywords" content="фотографии, моменты, атмосферу">
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -40,7 +34,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/mystyle.css">
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 
 <body>
@@ -79,8 +73,8 @@
 	{
 	  "@context": "http://schema.org",
 	  "@type": "LocalBusiness",
-	  "name": "Блог",
-	  "url": "https://www.instagram.com/o.b_prod/",
+	  "name": "фотограф из Минска",
+	  "image": "https://seo.belstu.by/Basalay/images/author.jpg",
 	  "telephone": "+375 (29) 865-79-68",
 	  "email": "basalay.oleg@yandex.by",
 	  "address": {
@@ -101,7 +95,7 @@
 		 "item":
 		 {
 		 "@id": "https://seo.belstu.by/Basalay/index.html",
-		 "name": "Главная",
+		 "name": "Фотограф Олег Пазний",
 		 "image": "https://seo.belstu.by/Basalay/images/author.jpg"
 		}
 		},
@@ -110,9 +104,9 @@
 		"position": 2,
 		"item":
 		{
-		"@id": "https://seo.belstu.by/Basalay/blog.html",
-		"name": "Блог",
-		"image": "https://seo.belstu.by/Basalay/images/author.jpg"
+		"@id": "https://seo.belstu.by/Basalay/404.html",
+		"name": "Страница не найдена",
+		"image": "https://seo.belstu.by/Basalay/images/dve-mashiny-stoyat-na-zakate.jpg"
 		}
 		}
 		]
@@ -125,105 +119,94 @@
 						style="background-image: url(images/author.jpg);"></span>Олег Пазний</a></h2>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Главная</a></li>
+					<li class="colorlib-active"><a href="index.html">Главная</a></li>
 					<li><a href="collection.html">Галерея</a></li>
 					<li><a href="about.html">Кто я?</a></li>
 					<li><a href="services.html">Мои услуги</a></li>
-					<li class="colorlib-active"><a href="blog.html">Блог</a></li>
+					<li><a href="blog.html">Блог</a></li>
 					<li><a href="contact.html">Контакты</a></li>
 				</ul>
 			</nav>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<section class="ftco-section ftco-bread">
-				<div class="container">
-					<div class="row no-gutters slider-text justify-content-center align-items-center">
-						<div class="col-md-8 ftco-animate">
-							<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Главная</a></span>
-								<span>Блог</span>
-							</p>
-							<h1 class="bread">Блог</h1>
-							<div class="gallery-info">
-								<p>Добро пожаловать на страницу блога!</p>
-								<p>Вместе с тобой я собираюсь погрузиться в мир фотографии и рассмотреть его с разных
-									ракурсов. Здесь ты найдешь самые яркие и впечатляющие моменты моих съемок: от
-									потрясающих пейзажей до увлекательных портретов. Не только живописные места, но и
-									эмоциональные истории жизни людей, задумчивые портреты и яркие сюжеты - все это я
-									пытаюсь передать через объектив своей камеры.</p>
-								<p>Моя цель - не только восхищать тебя красотой изображений, но и поделиться своими
-									навыками и опытом. Здесь я не только показываю свои работы, но и делюсь
-									технологиями, используемыми для создания этих фотографий. Я расскажу о правилах
-									композиции, о том, как захватить интересные углы и использовать свет для создания
-									запоминающихся снимков.</p>
+			<section class="ftco-section-no-padding bg-light">
+				<div class="hero-wrap">
+					<div class="overlay"></div>
+						<div class="author-info text p-3 p-md-5">
+							<div class="desc">
+								<span class="subheading">Страница </span>
+								<h1 class="big-letter">404</h1>
+								<h2 class="mb-4"><span>не</span> найдена<span>.</span></h2>
+								<p class="mb-4">Не переживайте, мы обязательно исправим это недоразумение. Возвращайтесь на главную и продолжайте знакомиться с моими работами!</p>
+								<ul class="ftco-social mt-3">
+									<li class="ftco-animate"><a href="https://www.instagram.com/o.b_prod/"
+											target="_blank"><span class="icon-instagram"></span></a></li>
+									<li class="ftco-animate"><a href="https://t.me/pazny" target="_blank"><span
+												class="icon-telegram"></span></a></li>
+									<li class="ftco-animate"><a href="https://vk.com/opazny" target="_blank"><span
+												class="icon-vk"></span></a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="ftco-section">
+			<section class="ftco-section instagram">
 				<div class="container">
-					<div class="row d-flex">
-						<div class="col">
-							<div class="row">
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="article-1.html" class="img img-2"
-											style="background-image: url(images/mashina-na-zakate.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="article-1.html">Разбор плёночных фотографий</a>
-											</h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>26 марта, 2023</span>
-													<span><a href="article-1.html">Советы, практика</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Разбор типичных ошибок и фишек плёночных фото.</p>
-											<p><a href="article-1.html" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="article-2.html" class="img img-2"
-											style="background-image: url(images/plenochnyj-fotoapparat-kiev.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="article-2.html">Из аналога в цифру</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>07 мая, 2023</span>
-													<span><a href="article-2.html">Советы, практика</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Разберем что делать с Вашими аналоговыми исходниками и как
-												посмотреть их на телефоне.</p>
-											<p><a href="article-2" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="blog-entry ftco-animate d-md-flex">
-										<a href="article-3.html" class="img img-2"
-											style="background-image: url(images/opel-vektra-c-szadi.jpg);"></a>
-										<div class="text text-2 p-4">
-											<h3 class="mb-2"><a href="article-3.html">Ретуширование изображений</a></h3>
-											<div class="meta-wrap">
-												<p class="meta">
-													<span>23 сентября, 2023</span>
-													<span><a href="article-3.html">Советы, практика</a></span>
-												</p>
-											</div>
-											<p class="mb-4">Ретуширование изображений на примере Opel Vectra.</p>
-											<p><a href="article-3.html" class="btn-custom">Смотреть <span
-														class="ion-ios-arrow-forward"></span></a></p>
-										</div>
-									</div>
-								</div>
-							</div><!-- END-->
+					<div class="row justify-content-center mb-2 pb-3">
+						<div class="col-md-7 heading-section heading-section-2 text-center ftco-animate">
+							<h2 class="mb-4">Подписывайтесь на мой <a href="https://www.instagram.com/o.b_prod/"
+									target="_blank">Instagram</a></h2>
 						</div>
-						<!-- END COL -->
+					</div>
+					<div class="row no-gutters">
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/reklama-audi-rs-etron.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/reklama-audi-rs-etron.jpg"
+									alt="Рекламные фотографии Audi" title="Фотография Audi RS e-tron GT">
+								<div class="icon d-flex justify-content-center">
+									<span class="icon-instagram align-self-center"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/dve-mashiny-stoyat-na-zakate.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/dve-mashiny-stoyat-na-zakate.jpg"
+									alt="Фотосессия машин на закате" title="Плёночная фотография двух машин на закате">
+								<div class="icon d-flex justify-content-center">
+									<span class="icon-instagram align-self-center"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/karbonovyj-velosiped-na-doroge.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/karbonovyj-velosiped-na-doroge.jpg"
+									alt="Фото карбонового велосипеда Oduwan"
+									title="Фотография велоипеда Oduwan на дороге">
+								<div class="icon d-flex justify-content-center">
+									<span class="icon-instagram align-self-center"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/seryj-avtomobil-edet-v-zakate.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup" src="images/seryj-avtomobil-edet-v-zakate.jpg"
+									alt="Фото Opel Vectra на закате" title="Плёночная фотография Opel Vectra">
+								<div class="icon d-flex justify-content-center">
+									<span class="icon-instagram align-self-center"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-sm-12 col-md ftco-animate crop-img">
+							<a href="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg" class="insta-img image-popup">
+								<img class="insta-img image-popup"
+									src="images/gonochnyj-seat-toledo-stoit-pod-mostom.jpg"
+									alt="Фотосессия Seat под мостом" title="Seat Toledo золотого цвета">
+								<div class="icon d-flex justify-content-center">
+									<span class="icon-instagram align-self-center"></span>
+								</div>
+							</a>
+						</div>
 					</div>
 				</div>
 			</section>
