--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
 	<meta name="description"
 		content="Узнайте мою историю становления фотографом, какой путь я прошел, чтобы быть готовым предоставлять свои услуги обществу.">
 	<meta name="keywords" content="камеру, начал, плёночной">
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="http://seo.belstu.by/Basalay/about.html" />
+	<meta property="og:title" content="О мне" />
+	<meta property="og:description" content="О фотографе Олеге Пазнем">
+	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
+	<meta property="og:locale" content="ru_RU" />
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -396,6 +402,8 @@
 													(29) 865-79-68</span></a></li>
 										<li><a href="#"><span class="icon icon-envelope"></span><span
 													class="text">basalay.oleg@yandex.by</span></a></li>
+													<li><script src="https://yastatic.net/share2/share.js"></script>
+														<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack" data-services="vkontakte,telegram,twitter,viber,whatsapp"></div></li>
 									</ul>
 								</div>
 							</div>
