--- a/article-2.html
+++ b/article-2.html
@@ -8,6 +8,12 @@
 	<meta name="description"
 		content="Узнайте как и где можно оцифровывать пленку и кассеты в Минске. Как оцифровать кассету в домашних условиях.">
 	<meta name="keywords" content="пленки, кассетами, проявке">
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="http://seo.belstu.by/Basalay/article-2.html" />
+	<meta property="og:title" content="Оцифровка" />
+	<meta property="og:description" content="Оцифровка плёночного носителя">
+	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
+	<meta property="og:locale" content="ru_RU" />
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -331,6 +337,8 @@
 													(29) 865-79-68</span></a></li>
 										<li><a href="#"><span class="icon icon-envelope"></span><span
 													class="text">basalay.oleg@yandex.by</span></a></li>
+													<li><script src="https://yastatic.net/share2/share.js"></script>
+														<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack" data-services="vkontakte,telegram,twitter,viber,whatsapp"></div></li>
 									</ul>
 								</div>
 							</div>
