--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta name="description" content="Для связи с фотографом в Минске используйте эти контакты!">
 	<meta name="keywords" content="контакты, фотограф, адрес">
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="http://seo.belstu.by/Basalay/contact.html" />
+	<meta property="og:title" content="Контакты" />
+	<meta property="og:description" content="Контакты фотографа Олега Пазнего">
+	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
+	<meta property="og:locale" content="ru_RU" />
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -258,6 +264,8 @@
 													(29) 865-79-68</span></a></li>
 										<li><a href="#"><span class="icon icon-envelope"></span><span
 													class="text">basalay.oleg@yandex.by</span></a></li>
+													<li><script src="https://yastatic.net/share2/share.js"></script>
+														<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack" data-services="vkontakte,telegram,twitter,viber,whatsapp"></div></li>
 									</ul>
 								</div>
 							</div>
