--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 	<meta name="description"
 		content="Привет, я фотограф из Минска. Переходи на мою страницу чтобы посмотреть на мои работы и узнать больше про меня!">
 	<meta name="keywords" content="фотографии, моменты, атмосферу">
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://seo.belstu.by/Basalay" />
+	<meta property="og:title" content="Главная" />
+	<meta property="og:description" content="Главная страница сайта фотографа">
+	<meta property="og:image" content= "https://seo.belstu.by/Basalay/images/author.jpg" />
+	<meta property="og:locale" content="ru_RU" />
+
 
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -306,6 +313,8 @@
 													(29) 865-79-68</span></a></li>
 										<li><a href="#"><span class="icon icon-envelope"></span><span
 													class="text">basalay.oleg@yandex.by</span></a></li>
+										<li><script src="https://yastatic.net/share2/share.js"></script>
+											<div class="ya-share2" data-curtain data-shape="round" data-color-scheme="whiteblack" data-services="vkontakte,telegram,twitter,viber,whatsapp"></div></li>
 									</ul>
 								</div>
 							</div>
